css/schedule.less
/* Layout styles */
.column {
  float: left;
}
.float {
  float:left;
}
.floatRight {
  float: right;
}
.clearFix {
  clear: both;
}
.span-1 {
  width: 60px;
}
.span-2 {
  width: 120px;
}
.span-3 {
  width: 180px;
}
.span-4 {
  width: 240px;
}
.span-5 {
  width: 300px;
}
.span-6 {
  width: 360px;
}
.span-7 {
  width: 420px;
}
.span-8 {
  width: 480px;
}
.span-9 {
  width: 540px;
}
.span-10 {
  width: 600px;
}
.span-11 {
  width: 660px;
}
.span-12 {
  width: 720px;
}
.span-13 {
  width: 780px;
}
.span-14 {
  width: 840px;
}
.span-15 {
  width: 900px;
}
.span-16 {
  width: 960px;
}
.span-17 {
  width: 1020px;
}

/* Start of Basic Mixins */

@border: 1px solid black;
.border-top {
  border-top: @border;
}
.border-right {
  border-right: @border;
}
.border-bottom {
  border-bottom: @border;
}
.border-left {
  border-left: @border;
}
.bordered {
  border: @border;
}
.headerCell {
  height: 30px;
  line-height: 30px;
}
.centerDiv {
  margin-right: auto;
  margin-left: auto;
}
.rounded-corners (@radius: 2px) {
  -webkit-border-radius: @radius;
  -moz-border-radius: @radius;
  -ms-border-radius: @radius;
  -o-border-radius: @radius;
  border-radius: @radius;
}

/* End of Basic Mixins */

/*
  HEIGHT AND WEIGHT CALCULATIONS
*/

@containerWidth: 960px;
@titleHeight: 60px;
@timeBlockHeight: 30px;

@showTimeBlockHeight: @timeBlockHeight + 1px;

@footerHeight: 70px;

/*
  Colours
*/
@pageBackground: #bfddd5;

// genres
@eclectic: #FF767D;
@news: #FFEB73;
@roots: #FF961D;
@electronic: #D288F2;
@cultural: #69EF8C;
@loud: #A6A6A6;
@specialty: #6DE1F1;
@open: #FFF;


.eclectic {
  background-color: @eclectic;
  color: #000;
  text-shadow: 0.1em 0.1em 0.2em #FF8E94;
}
.news {
  background-color: @news;
  color: #000;
  text-shadow: 0.1em 0.1em 0.2em #FFEE8C;
} 
.roots {
  background-color: @roots;
  color: #000;
  text-shadow: 0.1em 0.1em 0.2em #EFA65A;
}
.electronic {
  background-color: @electronic;
  color: #000;
  text-shadow: 0.1em 0.1em 0.2em #DC9EF7;
}
.cultural {
  background-color: @cultural;
  color: #000;
  text-shadow: 0.1em 0.1em 0.2em #84F5A1;
}
.loud {
  background-color: @loud;
  color: #000;
  text-shadow: 0.05em 0.1em 0.2em #C5C5C5;
}
.specialty {
  background-color: @specialty;
  color: #000;
  text-shadow: 0.1em 0.1em 0.2em #9AEBF6;
}
.open {
  background-color: @open;
}

.schedShow {
  padding-left: 2px;
  padding-right: 2px;
  display: table-cell;
  vertical-align: middle;
  line-height: 1em;
}

/*
  END OF HEIGHT AND WEIGHT CALCULATIONS
*/

html {
  padding-top: 0;
  margin-top: 0;
}
body {
  padding-top: 0;
  background-color: @pageBackground;
}
ul {
  list-style: none;
}
div#contentContainer {
  position: relative;
  .span-16;
  .centerDiv;
  z-index: 10;
}
div#pageBanner {
  position: absolute;
  top: 0;
  z-index: 0;
  height: 784px;
  width: 1200px;
  left: 50%;
  margin: 0 0 0 -600px;
}
div#bannerHeight {
  width: 100%;
  height: 290px;
}
img.background {
  min-width: 1200px;
  display: block;
  .centerDiv;
  margin-top: -50px;
}
div#scheduleBox {
  border-radius: 20px;
  .centerDiv;
  position: absolute;
  top: 290px;
  z-index: 700;
}
div#scheduleBuffer {
  height: 30px;
  background-color: #fff;
  .rounded-corners;
}
div#titleBox {
  text-align: center;
  height: @titleHeight;
  background: #555;
}
div.topBuffer {
  background-color: #FFF;
  .rounded-corners;
  height: 60px;
}
div#messageBox {
  .column;
  .span-16;
  .centerDiv;
  height: 30px;
  cursor: default;
}
div#message {
  text-align: center;
  line-height: 30px;
}
div.day {
  .column;
  .span-2;
}
div#days-box {
  .span-16;
}
div#headerRow {
  .span-16;
}
div#dayHeaders {
  .span-14;
  .column;
}
div.dayHeader {
  text-align: center;
  .headerCell;
  .span-2;
  .column;
  cursor: default;
}
div.timeHeader{
  .headerCell;
  .span-1;
  .column;
}
div#contentRow {
  .span-16;
  .column;
  background: #000;
  .rounded-corners;
}
div.timesDiv {
  float: left;
}
div#left-times {
  .span-1;
  .column;
}
div#right-times {
  .span-1;
  .column;
}
div.timestrip {
  .span-1;
  .column;
  margin-top: 1px;
  cursor: default;
}
div.timeBlock {
  text-align: right;
  font-size: 85%;
  padding-right: 5px;
  line-height: @timeBlockHeight;
  background-color: #FFF;
  width: 58px;
  .centerDiv;
  height: 29px;
  margin: 1px;
  .rounded-corners;
  cursor: default;
}
span.show-style {
  position: absolute;
  line-height: 29px; 
  width: 118px;
  margin: 1px;
  .rounded-corners;
  text-align: center;
  cursor: pointer;
}
span.bbc {
  position: absolute;
  line-height: 29px; 
  cursor: pointer; 
  width: 120px;
  z-index: 300;
}
span#bbcBanner {
  position: absolute;
  width: 598px;
  margin: 1px;
  height: 58px;
  .news;
  .rounded-corners;
  text-align: center;
  line-height: 58px;
  z-index: 10;
}

/* FEATURE MODAL */
div#featMoveBack {
  .column;
  position: relative;
}
div#featMoveForward {
  .column;
  position: relative;
}
div#featureWrap {
  width: 700px;
}
div#featureWrapChild {
  width: 700px;
  background-color: yellow;
  margin-left: auto;
  margin-right: auto;
}
div.previousFeat {
  .column;
  width: 40px;
  cursor: pointer;
  padding-right: 30px;
}
div.nextFeat {
  .column;
  width: 60px;
  text-align: right;
  cursor: pointer;
}
.featureHead {

  padding-left: 60px;
}
div.feature {
  .column;
  width: 500px;
}
div#feature-modal-body {
  display: block;
}

div#legendContainer {
  display: block;
  margin: 10px auto;
  .span-15;
  background-color: #fff;
  .rounded-corners;
  text-align: center;
}
div#legendContainer h3{
  margin-left: 40px;
  padding-top: 10px;
  margin-bottom: 10px;
  text-align: left;
}

#legendSwatches {
  width: 860px;
  margin: 0 auto 10px auto;
  padding-bottom: 10px;
  cursor: default;
}

@legendSwatchHeight: 25px;

.legendTab {
  height: @legendSwatchHeight;
  .column;
  line-height: @legendSwatchHeight;
  text-align: center;
  .rounded-corners;
  margin-left: 5px;
  margin-right: 5px;
  margin-bottom: 6px;
}

span.legendSwatch {
  .span-2;
  .legendTab;
}
span.legendDescBackground {
  .span-12;
  .legendTab;
}
span.legendLabel {
  .column;
}
p.legendDescription {
  .column;
  .span-12;
}

div#footer {
  display: block;
  .column;
  min-height: @footerHeight;
  width: 960px;
  margin: 5px auto;
  text-align: center;
}

